--- a/tutorial_TeX/preamble.tex
+++ b/tutorial_TeX/preamble.tex
@@ -137,6 +137,15 @@
 
 \lstset{breaklines=true}
 
+\lstdefinestyle{textboxSmall}{
+  language=Matlab,
+  stepnumber=1,
+  numbersep=10pt,
+  tabsize=4,
+  showspaces=false,
+  showstringspaces=false
+}
+
 \definecolor{shadecolor}{RGB}{238,224,229}
 
 \setlength{\tabcolsep}{5pt}
