Working on simple BM tutorial.

--- a/tutorial_TeX/RB_PhyloMultivariateComparative_Tutorial/refs.bib
+++ b/tutorial_TeX/RB_PhyloMultivariateComparative_Tutorial/refs.bib
@@ -65,6 +65,18 @@
   Timestamp                = {2015.01.20}
 }
 
+@Article{Felsenstein1985a,
+  Title                    = {Phylogenies and the comparative method},
+  Author                   = {Felsenstein, Joseph},
+  Journal                  = {American Naturalist},
+  Year                     = {1985},
+  Pages                    = {1--15},
+
+  Owner                    = {hoehna},
+  Publisher                = {JSTOR},
+  Timestamp                = {2015.01.20}
+}
+
 @Article{Felsenstein1981,
   Title                    = {{Evolutionary trees from DNA sequences: A maximum likelihood approach}},
   Author                   = {Felsenstein, J.},
@@ -77,37 +89,6 @@
   Owner                    = {shhn001},
   Publisher                = {Springer},
   Timestamp                = {2008.04.04}
-}
-
-@Article{Hohna2012,
-  Title                    = {{Guided Tree Topology Proposals for Bayesian Phylogenetic Inference}},
-  Author                   = {Sebastian H{\"o}hna and Alexei J. Drummond},
-  Journal                  = SYSBIO,
-  Year                     = {2012},
-  Number                   = {1},
-  Pages                    = {1--11},
-  Volume                   = {61},
-
-  Owner                    = {hoehna},
-  Publisher                = {Oxford University Press},
-  Timestamp                = {2011.07.11}
-}
-
-@Article{Hohna2014b,
-  Title                    = {{Probabilistic Graphical Model Representation in Phylogenetics}},
-  Author                   = {H{\"o}hna, Sebastian and Heath, Tracy A. and Boussau, Bastien and Landis, Michael J. and Ronquist, Fredrik and Huelsenbeck, John P.},
-  Journal                  = SYSBIO,
-  Year                     = {2014},
-  Number                   = {5},
-  Pages                    = {753-771},
-  Volume                   = {63},
-
-  Abstract                 = {Recent years have seen a rapid expansion of the model space explored in statistical phylogenetics, emphasizing the need for new approaches to statistical model representation and software development. Clear communication and representation of the chosen model is crucial for: (i) reproducibility of an analysis, (ii) model development, and (iii) software design. Moreover, a unified, clear and understandable framework for model representation lowers the barrier for beginners and nonspecialists to grasp complex phylogenetic models, including their assumptions and parameter/variable dependencies. Graphical modeling is a unifying framework that has gained in popularity in the statistical literature in recent years. The core idea is to break complex models into conditionally independent distributions. The strength lies in the comprehensibility, flexibility, and adaptability of this formalism, and the large body of computational work based on it. Graphical models are well-suited to teach statistical models, to facilitate communication among phylogeneticists and in the development of generic software for simulation and statistical inference. Here, we provide an introduction to graphical models for phylogeneticists and extend the standard graphical model representation to the realm of phylogenetics. We introduce a new graphical model component, tree plates, to capture the changing structure of the subgraph corresponding to a phylogenetic tree. We describe a range of phylogenetic models using the graphical model framework and introduce modules to simplify the representation of standard components in large and complex models. Phylogenetic model graphs can be readily used in simulation, maximum likelihood inference, and Bayesian inference using, for example, Metropolis–Hastings or Gibbs sampling of the posterior distribution. [Computation; graphical models; inference; modularization; statistical phylogenetics; tree plate.]},
-  Doi                      = {10.1093/sysbio/syu039},
-  Eprint                   = {http://sysbio.oxfordjournals.org/content/63/5/753.full.pdf+html},
-  Owner                    = {hoehna},
-  Timestamp                = {2014.03.11},
-  Url                      = {http://sysbio.oxfordjournals.org/content/63/5/753.abstract}
 }
 
 @Book{Harvey1991,
